重构战斗流程和数字演出，优化灵魂链接的逻辑。